Add heading group and image (note: text in <h1> still be scaled when resize browser)

--- a/museum-of-candy/index.html
+++ b/museum-of-candy/index.html
@@ -22,8 +22,8 @@
 <body>
   <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light py-0 fixed-top">
     <a class="navbar-brand" href="#">CANDY</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
-      aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks"
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navLinks">
@@ -34,7 +34,25 @@
       </div>
     </div>
   </nav>
-  
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+          <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="imgs/hand2.png" alt="top-image" />
+      </div>
+    </div>
+  </section>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
