--- a/museum-of-candy/index.html
+++ b/museum-of-candy/index.html
@@ -53,6 +53,25 @@
       </div>
     </div>
   </section>
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center">
+      <div class="col-md-6 order-2 order-md-1">
+        <img src="imgs/milk.png" class="img-fluid" alt="milk=pic"/>
+      </div>
+      <div class="col-md-6 text-center order-1 order-md-2">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" class="d-none d-lg-inline"/>
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit, dolor quibusdam inventore magni exercitationem blanditiis! Nulla, debitis? Iusto aliquam quam repellat! Vitae et fugit nostrum eius accusantium, repellendus debitis! Cupiditate harum natus fuga adipisci. 
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
