--- a/museum-of-candy/index.html
+++ b/museum-of-candy/index.html
@@ -37,7 +37,7 @@
 
   <section class="container-fluid px-0">
     <div class="row align-items-center">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
           <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
           <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
@@ -48,25 +48,65 @@
           <h1>MESEUM <span>/</span> OF <span>/</span> CANDY</h1>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <img class="img-fluid" src="imgs/hand2.png" alt="top-image" />
       </div>
     </div>
   </section>
 
   <section class="container-fluid px-0">
-    <div class="row align-items-center">
+    <div class="row align-items-center content">
       <div class="col-md-6 order-2 order-md-1">
-        <img src="imgs/milk.png" class="img-fluid" alt="milk=pic"/>
+        <img src="imgs/milk.png" class="img-fluid" alt="milk=pic" />
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
         <div class="row justify-content-center">
-          <div class="col-10 col-lg-8 blurb">
-              <h2>MUSEUM OF CANDY</h2>
-              <img src="imgs/lolli_icon.png" class="d-none d-lg-inline"/>
-              <p class="lead">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit, dolor quibusdam inventore magni exercitationem blanditiis! Nulla, debitis? Iusto aliquam quam repellat! Vitae et fugit nostrum eius accusantium, repellendus debitis! Cupiditate harum natus fuga adipisci. 
-              </p>
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" class="d-none d-lg-inline" />
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit, dolor quibusdam inventore magni
+              exercitationem blanditiis! Nulla, debitis? Iusto aliquam quam repellat! Vitae et fugit nostrum eius
+              accusantium, repellendus debitis! Cupiditate harum natus fuga adipisci.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row align-items-center content">
+      <div class="col-md-6 text-center">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" class="d-none d-lg-inline" />
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit, dolor quibusdam inventore magni
+              exercitationem blanditiis! Nulla, debitis? Iusto aliquam quam repellat! Vitae et fugit nostrum eius
+              accusantium, repellendus debitis! Cupiditate harum natus fuga adipisci.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img src="imgs/gumball.png" class="img-fluid" alt="milk=pic" />
+      </div>
+    </div>
+
+    <div class="row align-items-center content">
+      <div class="col-md-6 order-2 order-md-1">
+        <img src="imgs/sprinkles.png" class="img-fluid" alt="milk=pic" />
+      </div>
+      <div class="col-md-6 text-center order-1 order-md-2">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" class="d-none d-lg-inline" />
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit, dolor quibusdam inventore magni
+              exercitationem blanditiis! Nulla, debitis? Iusto aliquam quam repellat! Vitae et fugit nostrum eius
+              accusantium, repellendus debitis! Cupiditate harum natus fuga adipisci.
+            </p>
           </div>
         </div>
       </div>
@@ -84,6 +124,14 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
+  <script>
+    $(function () {
+      $(document).scroll(function () {
+        var $nav = $("#mainNavbar");
+        $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+      })
+    })
+  </script>
 </body>
 
 </html>
